crates/bevy_naga_oil/src/compose/tests/invalid_identifiers/struct_member.wgsl
#define_import_path struct_members

struct FineStruct {
    fine: f32,
}

struct BadStruct {
    also_fine: f32,
    bad_: f32,
}